# karaoke-price-finder

./: .gitignore  README.md  package-lock.json  tailwind.config.ts
app/: globals.css  page.tsx
backend/: .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
backend/app/: db.py  dummy_karaoke_stores.py  get_data.py  main.py  models.py  models_for_dummy.py  pyproject.toml  schemas.py  seed.py  seed_data.py  seed_from_dummy.py  services.py  tables.py  test_find_cheapest_plan.py  test_main.py  test_utils.py  utils.py
backend/tests/: test_api.py  test_main.py  test_price_logic.py  test_utils.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/app/pages/: ResultsPage.tsx  SearchPage.tsx  SettingsSheet.tsx  StoreDetail.tsx
frontend/app/types/: api.ts  store.ts
frontend/components/: ResultsMap.tsx
frontend/components/ui/: sheet.tsx
