[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.13",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 119
exclude = [".venv"]
lint.select = [
    "E",  # pycodestyle errors      # flake8
    "W",  # pycodestyle warnings    # flake8
    "F",  # pyflakes                # flake8
    "I",  # isort
    "FAST",
]
